refactor: remove magic values, add localization to product

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,5 @@ error.failed.exchange.rate.data=Failed to fetch exchange rates from the API.
 error.unexpected.exchange.rate.update=An unexpected error occurred while updating exchange rates.
 
 # Products messages
+error.product.not.found=Product not found.
+error.product.already.exists=A product with this code already exists.
