refactor: change naming, add exception, make code more robust, add localization to ex

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,3 +8,4 @@ error.unexpected.exchange.rate.update=An unexpected error occurred while updatin
 # Products messages
 error.product.not.found=Product not found.
 error.product.already.exists=A product with this code already exists.
+error.product.save=Failed to save product.
