feat: add swagger doc

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,10 +1,10 @@
 # Currency messages
-error.invalid.base.price=Invalid base price. It must be a non-negative value.
-error.currency.not.supported=The requested currency: {0} is not supported.
-error.failed.exchange.rate.data=Failed to fetch exchange rates from the API.
-error.unexpected.exchange.rate.update=An unexpected error occurred while updating exchange rates.
+error.invalid.base.price=Invalid base price. It must be a non-negative value
+error.currency.not.supported=The requested currency: {0} is not supported
+error.failed.exchange.rate.data=Failed to fetch exchange rates from the API
+error.unexpected.exchange.rate.update=An unexpected error occurred while updating exchange rates
 
 # Products messages
-error.product.not.found=Product not found.
-error.product.already.exists=A product with this code already exists.
-error.product.save=Failed to save product.
+error.product.not.found=Product not found
+error.product.already.exists=A product with this code already exists
+error.product.save=Failed to save product
