--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,10 +1,12 @@
 # Currency messages
 error.invalid.base.price=Invalid base price. It must be a non-negative value
 error.currency.not.supported=The requested currency: {0} is not supported
-error.failed.exchange.rate.data=Failed to fetch exchange rates from the API
+error.failed.exchange.rate.data=Failed to fetch exchange rates from the API: {0}
+error.failed.date.time.format=Failed to format a date
 error.unexpected.exchange.rate.update=An unexpected error occurred while updating exchange rates
+error.validation.fetched.exchange.rates=Error occurred when fetching exchange rates for supported currencies
 
 # Products messages
-error.product.not.found=Product not found
-error.product.already.exists=A product with this code already exists
+error.product.not.found=Product not found for code: {0}
+error.product.already.exists=A product with this code '{0}' already exists
 error.product.save=Failed to save product
