refactor: improve build, performance, readability and maintainability

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,7 @@ error.failed.exchange.rate.data=Failed to fetch exchange rates from the API: {0}
 error.failed.date.time.format=Failed to format a date
 error.unexpected.exchange.rate.update=An unexpected error occurred while updating exchange rates
 error.validation.fetched.exchange.rates=Error occurred when fetching exchange rates for supported currencies
+error.exchange.rate.not.found.in.cache=Error exchange rate for currency: {0} not found in cache
 
 # Products messages
 error.product.not.found=Product not found for code: {0}
