refactor: fix error message, simplify mapper

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,5 +9,5 @@ error.exchange.rate.not.found.in.cache=Error exchange rate for currency: {0} not
 
 # Products messages
 error.product.not.found=Product not found for code: {0}
-error.product.already.exists=A product with this code '{0}' already exists
+error.product.already.exists=A product with this code: {0} already exists
 error.product.save=Failed to save product
